# sibyl_erp

./: .gitignore  README.md  hooks.py  pyproject.toml  sibyl-theme-builder.html
public/admin/: index.html
public/css/: sibyl-base.css  sibyl-desk.css  sibyl-forms.css  sibyl-navbar.css  sibyl-sidebar.css  sibyl-variables.css
public/js/: sibyl-core.js
sibyl_erp/: hooks.py  modules.txt
sibyl_erp/doctype/sibyl_client/: sibyl_client.json
sibyl_erp/doctype/sibyl_module_color/: sibyl_module_color.json
sibyl_erp/doctype/sibyl_theme/: sibyl_theme.json  sibyl_theme.py
sibyl_erp/setup/: install.py
sibyl_erp/utils/: jinja.py
templates/pages/: login.html
