[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sibyl_erp"
authors = [
    {name = "Sibyl Technologies", email = "dev@sibyl.io"}
]
description = "Sibyl ERP — Built on Frappe. Redefined."
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"

# ⚠️  DO NOT add frappe or erpnext here.
# They are bench-managed apps, not pip packages.
# Adding them breaks uv dependency resolution.
dependencies = []

[project.urls]
Homepage = "https://sibyl.io"
Documentation = "https://docs.sibyl.io"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
erpnext = ">=15.0.0"
