[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sibyl_erp"
authors = [
    {name = "Sibyl Technologies", email = "dev@sibyl.io"}
]
description = "Sibyl ERP — Built on Frappe. Redefined."
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"

dependencies = []

[project.urls]
Homepage = "https://sibyl.io"
Documentation = "https://docs.sibyl.io"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0"
erpnext = ">=16.0.0"